[package]
name = "mbs"
version = "0.1.0"
edition = "2021"

[[bin]]
name="mbs"
path="./src/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#model = { path = "./models/base/model" }
#force_effector = { path = "./models/base/force_effector" }
simfrastructure = { path = "./simfrastructure" }
eom = { path = "./models/base/eom" }
models = { path = "./models" }